# fzy-tmux

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test.yml
src/: main.rs
